objects/TIMBASURVEYS__Question_Summary__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__Answer__c</fullName>
        <label>Answer(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__PageNumber__c</fullName>
        <label>PageNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Position__c</fullName>
        <label>Position</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question2__c</fullName>
        <label>Sub Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question_Summary_Name_Long__c</fullName>
        <description>This field is used to store Question Text over 80 characters</description>
        <label>Question Summary Name Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey_Summary__c</fullName>
        <label>Survey Summary</label>
        <referenceTo>TIMBASURVEYS__Survey_Summary__c</referenceTo>
        <relationshipLabel>Question Summaries</relationshipLabel>
        <relationshipName>Question_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__max_weight__c</fullName>
        <label>max weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__weight__c</fullName>
        <label>weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Question Summary</label>
    <nameField>
        <label>Question Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>